--- a/app/index.html
+++ b/app/index.html
@@ -75,6 +75,27 @@
 				<img class="overlay1-img" src="./img/city-panoram.jpg" alt="img">
 			</section>
 
+			<section class="analiz-wrapper" id="section0">
+				<div class="container">
+					<div class="analiz">
+						<h2 class="analiz-title">Lorem ipsum dolor.</h2>
+						<iframe src="http://dane-i-analizy.pl/raport/1829-poltava-eng/zobacz/atlas.html" frameborder="0" style="border:none; overflow:hidden; width:850px; min-width: 100%; height:800px;" allowTransparency="true"> </iframe>
+					</div>
+				</div>
+			</section>
+
+			<section class="services-wrapper">				
+				<img class="parallax_scene0" src="./img/med-history0.jpg" alt="photo">				
+				</div>
+				<div class="container">
+					<div class="services">
+						<h2 class="services-main-title">Lorem ipsum.</h2>
+						<h3 class="services-title">Lorem ipsum dolor.</h3>
+						<h3 class="services-title">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veniam itaque quaerat sit quos vero esse suscipit ipsum reiciendis. Omnis explicabo, ipsam repellat blanditiis nihil minus ullam voluptates veritatis molestias id.</h3>
+					</div>
+				</div>
+			</section>
+
 			<section class="about-wrapper" id="section1">
 				<div class="container">
 					<div class="about">
@@ -91,7 +112,7 @@
 			</section>
 			
 			<section class="services-wrapper" id="section2">				
-				<img class="parallax_scene1" src="./img/med-history.jpg" alt="photo">				
+				<img class="parallax_scene1" src="./img/med-history1.jpg" alt="photo">				
 				</div>
 				<div class="container">
 					<div class="services">
