--- a/app/index.html
+++ b/app/index.html
@@ -17,64 +17,52 @@
 					<div class="logo-container">
 						<img class="logo" src="./img/logo.jpg" alt="logo">	
 					</div>
-					<div class="header-info">
-						<div class="social">
-							<a class="mailto" data-auto-recognition="true" data-content="contact@poweragentmarketing.com" href="mailto:contact@poweragentmarketing.com" data-type="mail">email@gmail.com</a>
-							<div class="phone-container">
-								<span class="phone">+380 32 888 88 88</span>
-								<a class="facebook-link" href="#"><img class="facebook" src="./img/facebook.png" alt="facebook"></a>
-								<a class="instagram-link" href="#"><img class="instagram" src="./img/instagram.png" alt="instagram"></a>		
-							</div>											
-						</div>	
 
-						<nav>
-							<ul class="nav-list">
-								<li class="list-item"><a class="item-link active" href="./">Home</a></li>
-								<li class="list-item"><a class="item-link" href="#section1">section1</a></li>
-								<li class="list-item"><a class="item-link" href="#section2">section2</a></li>
-								<li class="list-item"><a class="item-link" href="#section3">section3</a></li>
-								<li class="list-item"><a class="item-link" href="#section4">section4</a></li>
-								<li class="list-item">
-									<span class="item-link">language</span>
-									<ul class="nuv-sublist">
-										<li class="sublist-item"><a class="subitem-link" href="#">UA</a></li>
-										<li class="sublist-item"><a class="subitem-link" href="#">EN</a></li>
-										<li class="sublist-item"><a class="subitem-link" href="#">DE</a></li>
-									</ul>
-								</li>
-									
-							</ul>
-						</nav>
-					</div>
+					<nav class="nav">
+						<ul class="nav-list">							
+							<li class="list-item"><a class="item-link active" href="./">Home</a></li>
+
+							<li class="list-item">
+								<span class="item-link">Personnel</span>
+								<ul class="nuv-sublist">
+									<li class="sublist-item"><a class="subitem-link" href="#">Lviv</a></li>
+									<li class="sublist-item"><a class="subitem-link" href="#">Poltava</a></li>									
+								</ul>
+							</li>
+
+							<li class="list-item">
+								<span class="item-link">Hospital infrastructure</span>
+								<ul class="nuv-sublist">
+									<li class="sublist-item"><a class="subitem-link" href="#">Lviv</a></li>
+									<li class="sublist-item"><a class="subitem-link" href="#">Poltava</a></li>									
+								</ul>
+							</li>
+
+							<li class="list-item">
+								<span class="item-link" href="#">Discharges</span>
+								<ul class="nuv-sublist">
+									<li class="sublist-item"><a class="subitem-link" href="#">Lviv</a></li>
+									<li class="sublist-item"><a class="subitem-link" href="#">Poltava</a></li>									
+								</ul>
+							</li>
+
+							<li class="list-item">
+								<span class="item-link" href="#">Surgeries</span>
+								<ul class="nuv-sublist">
+									<li class="sublist-item"><a class="subitem-link" href="#">Lviv</a></li>
+									<li class="sublist-item"><a class="subitem-link" href="#">Poltava</a></li>									
+								</ul>
+							</li>
+
+						</ul>
+					</nav>
+					
 				</div>
 			</div>			
 		</header>
 
 		<main role="main">
-
-			<section class="video-wrapper">
-				<div class="container">
-					<div class="agency">
-						<div class="agency-top">
-							<div class="agency-title-container">
-								<h3 class="title">Lorem ipsum dolor sit amet.</h3>
-								<h2 class="title-price">
-									Lorem ipsum.<br>Lorem ipsum dolor.<br>Lorem ipsum dolor sit.
-								</h2>
-							</div>
-							<div class="agency-video-container">
-								<video id="video" width="90%" autoplay controls src="./img/nurse.mp4" type="video/mp4"></video>														
-							</div>							
-						</div>						
-						<p class="agency-bottom">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi aliquam nam tempore magnam ratione unde sequi commodi, consectetur.</p>		
-					</div>
-				</div>				
-			</section>	
-
-			<section class="overlay1">
-				<img class="overlay1-img" src="./img/city-panoram.jpg" alt="img">
-			</section>
-
+			
 			<section class="analiz-wrapper">
 				<div class="container">
 					<div class="analiz">
@@ -92,33 +80,6 @@
 				</div>
 			</section>
 
-			<section class="services-wrapper" id="section0">				
-				<img class="parallax_scene0" src="./img/med-history0.jpg" alt="photo">				
-				</div>
-				<div class="container">
-					<div class="services">
-						<h2 class="services-main-title">Lorem ipsum.</h2>
-						<h3 class="services-title">Lorem ipsum dolor.</h3>
-						<h3 class="services-title">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veniam itaque quaerat sit quos vero esse suscipit ipsum reiciendis. Omnis explicabo, ipsam repellat blanditiis nihil minus ullam voluptates veritatis molestias id.</h3>
-					</div>
-				</div>
-			</section>
-
-			<section class="about-wrapper" id="section1">
-				<div class="container">
-					<div class="about">
-						<h2 class="about-title">Lorem ipsum dolor.</h2>
-						<div class="img-container">
-							<img class="about-img" src="./img/ukraine.png" alt="photo">
-						</div>						
-						<p class="about-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Obcaecati, itaque voluptas quos, repudiandae, consectetur nisi cupiditate adipisci facere sapiente id voluptatum rerum amet quam consequuntur reiciendis delectus magnam fugiat quisquam.</p>
-						<p class="about-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Exercitationem sit odio corporis omnis nemo ea ducimus et rem, facilis voluptas?</p>
-						<p class="about-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos tenetur inventore consequatur voluptatem, adipisci natus odit voluptates quia corporis velit officia voluptatibus, unde nulla ab autem totam. Voluptatum, quidem, eius. Illum, tenetur culpa! Expedita, officia!</p>
-						<p class="about-text mg-b-0">Lorem ipsum dolor.<br>Lorem ipsum dolor sit amet.</p>		
-					</div>						
-				</div>							
-			</section>
-			
 			<section class="services-wrapper" id="section2">				
 				<img class="parallax_scene1" src="./img/med-history1.jpg" alt="photo">				
 				</div>
@@ -152,89 +113,106 @@
 							<a class="panel-item raised" href="#" target="_blank">
 								<div class="item-container">
 									<div class="adapt-container" style="padding-bottom: 80%"> 
-										<img class="panel-image" src="./img/infographics.svg" alt="Logos">		
+										<img class="panel-image" src="./img/picture-touch-up.svg" alt="Logos">		
 									</div>
-									<span class="item-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</span>			
+									<span class="item-text">Personnel</span>			
 								</div>
-								<h3 class="panel-name">Lorem ipsum dolor sit amet.</h3>										
+								<h3 class="panel-name">Lviv</h3>										
 							</a>	
 							<a class="panel-item raised" href="#" target="_blank">
 								<div class="item-container">
 									<div class="adapt-container" style="padding-bottom: 80%">
-										<img class="panel-image" src="./img/business-cards.svg" alt="Busines cards">
+										<img class="panel-image" src="./img/social-media-icons.svg" alt="Busines cards">
 									</div>
-									<span class="item-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis animi omnis saepe obcaecati explicabo totam.</span>
+									<span class="item-text">Hospital infrastructure</span>
 								</div>
-								<h3 class="panel-name">Lorem ipsum.<br>Lorem ipsum.</h3>								
+								<h3 class="panel-name">Lviv</h3>								
 							</a>	
 							<a class="panel-item raised" href="#" target="_blank">
 								<div class="item-container">
 									<div class="adapt-container" style="padding-bottom: 80%">
-										<img class="panel-image" src="./img/social-media-icons.svg" alt="Open house flyers">
+										<img class="panel-image" src="./img/infographics.svg" alt="Open house flyers">
 									</div>
-									<span class="item-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</span>
+									<span class="item-text">Discharges</span>
 								</div>
-								<h3 class="panel-name">Lorem ipsum.</h3>									
+								<h3 class="panel-name">Lviv</h3>									
 							</a>
 							<a class="panel-item raised" href="#" target="_blank">
 								<div class="item-container">
 									<div class="adapt-container" style="padding-bottom: 80%">
-										<img class="panel-image" src="./img/listing-presentations.svg" alt="Listing presentations">
+										<img class="panel-image" src="./img/business-cards.svg" alt="Listing presentations">
 									</div>
-									<span class="item-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</span>	
+									<span class="item-text">Surgeries</span>	
 								</div>							
-								<h3 class="panel-name">Lorem ipsum.</h3>								
+								<h3 class="panel-name">Lviv</h3>								
 							</a>	
 							<a class="panel-item raised" href="#" target="_blank">
 								<div class="item-container">
 									<div class="adapt-container" style="padding-bottom: 80%">
-										<img class="panel-image" src="./img/social-media-icons.svg" alt="Just listed Just sold">
+										<img class="panel-image" src="./img/picture-touch-up.svg" alt="Just listed Just sold">
 									</div>
-									<span class="item-text">Lorem ipsum dolor sit.</span>
+									<span class="item-text">Personnel</span>
 								</div>
-								<h3 class="panel-name">Lorem ipsum.<br>Lorem ipsum.</h3>								
+								<h3 class="panel-name">Poltava</h3>								
 							</a>	
 							<a class="panel-item raised" href="#" target="_blank">
 								<div class="item-container">
 									<div class="adapt-container" style="padding-bottom: 80%">
-										<img class="panel-image" src="./img/picture-touch-up.svg" alt="picture touch up">
+										<img class="panel-image" src="./img/social-media-icons.svg" alt="picture touch up">
 									</div>
-									<span class="item-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa ipsam, excepturi odio.</span>
+									<span class="item-text">Hospital infrastructure</span>
 								</div>
-								<h3 class="panel-name">Lorem ipsum.</h3>								
+								<h3 class="panel-name">Poltava</h3>								
 							</a>	
 							<a class="panel-item raised" href="#" target="_blank">
 								<div class="item-container">
 									<div class="adapt-container" style="padding-bottom: 80%">
 										<img class="panel-image" src="./img/infographics.svg" alt="Infographics">
 									</div>
-									<span class="item-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo, illum!</span>
+									<span class="item-text">Discharges</span>
 								</div>
-								<h3 class="panel-name">Lorem ipsum.<br>Lorem ipsum.</h3>								
+								<h3 class="panel-name">Poltava</h3>								
 							</a>	
 							<a class="panel-item raised" href="#" target="_blank">
 								<div class="item-container">
 									<div class="adapt-container" style="padding-bottom: 80%">
-										<img class="panel-image" src="./img/mailers.svg" alt="Mailers">
+										<img class="panel-image" src="./img/business-cards.svg" alt="Mailers">
 									</div>
-									<span class="item-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate, tenetur, dolorum.</span>
+									<span class="item-text">Surgeries</span>
 								</div>
-								<h3 class="panel-name">Lorem ipsum.</h3>								
-							</a>	
-							<a class="panel-item raised" href="#" target="_blank">
-								<div class="item-container">
-									<div class="adapt-container" style="padding-bottom: 80%">
-										<img class="panel-image" src="./img/social-media-icons.svg" alt="Social media images">
-									</div>
-									<span class="item-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ullam cupiditate, harum accusantium deleniti maxime mollitia dignissimos?</span>
-								</div>
-								<h3 class="panel-name">Lorem ipsum.</h3>								
-							</a>							
+								<h3 class="panel-name">Poltava</h3>								
+							</a>			
 						</div>
 					</div>
 				</div>	
-			</section>				
+			</section>		
 
+			<section class="services-wrapper" id="section0">				
+				<img class="parallax_scene0" src="./img/med-history0.jpg" alt="photo">				
+				</div>
+				<div class="container">
+					<div class="services">
+						<h2 class="services-main-title">Lorem ipsum.</h2>
+						<h3 class="services-title">Lorem ipsum dolor.</h3>
+						<h3 class="services-title">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veniam itaque quaerat sit quos vero esse suscipit ipsum reiciendis. Omnis explicabo, ipsam repellat blanditiis nihil minus ullam voluptates veritatis molestias id.</h3>
+					</div>
+				</div>
+			</section>
+
+			<section class="about-wrapper" id="section1">
+				<div class="container">
+					<div class="about">
+						<h2 class="about-title">Lorem ipsum dolor.</h2>
+						<div class="img-container">
+							<img class="about-img" src="./img/ukraine.png" alt="photo">
+						</div>						
+						<p class="about-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Obcaecati, itaque voluptas quos, repudiandae, consectetur nisi cupiditate adipisci facere sapiente id voluptatum rerum amet quam consequuntur reiciendis delectus magnam fugiat quisquam.</p>
+						<p class="about-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Exercitationem sit odio corporis omnis nemo ea ducimus et rem, facilis voluptas?</p>
+						<p class="about-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos tenetur inventore consequatur voluptatem, adipisci natus odit voluptates quia corporis velit officia voluptatibus, unde nulla ab autem totam. Voluptatum, quidem, eius. Illum, tenetur culpa! Expedita, officia!</p>
+						<p class="about-text mg-b-0">Lorem ipsum dolor.<br>Lorem ipsum dolor sit amet.</p>		
+					</div>						
+				</div>							
+			</section>
 			
 			<section class="check-wrapper" id="section4">
 				<div class="container">
@@ -275,6 +253,7 @@
 				</div>								
 			</div>
 		</footer>
+
 		<script src="./js/libs/Parallax.min.js"></script>
 		<script src="js/app.js" type="text/javascript" charset="utf-8"></script>		
 	</body>
