--- a/app/index.html
+++ b/app/index.html
@@ -25,32 +25,32 @@
 							<li class="list-item">
 								<span class="item-link">Personnel</span>
 								<ul class="nuv-sublist">
-									<li class="sublist-item"><a class="subitem-link" href="#">Lviv</a></li>
-									<li class="sublist-item"><a class="subitem-link" href="#">Poltava</a></li>									
+									<li class="sublist-item"><a class="subitem-link" href="#modal-1" data-modal-open>Lviv</a></li>
+									<li class="sublist-item"><a class="subitem-link" href="#modal-1" data-modal-open>Poltava</a></li>									
 								</ul>
 							</li>
 
 							<li class="list-item">
 								<span class="item-link">Hospital infrastructure</span>
 								<ul class="nuv-sublist">
-									<li class="sublist-item"><a class="subitem-link" href="#">Lviv</a></li>
-									<li class="sublist-item"><a class="subitem-link" href="#">Poltava</a></li>									
+									<li class="sublist-item"><a class="subitem-link" href="#modal-1" data-modal-open>Lviv</a></li>
+									<li class="sublist-item"><a class="subitem-link" href="#modal-1" data-modal-open>Poltava</a></li>									
 								</ul>
 							</li>
 
 							<li class="list-item">
 								<span class="item-link" href="#">Discharges</span>
 								<ul class="nuv-sublist">
-									<li class="sublist-item"><a class="subitem-link" href="#">Lviv</a></li>
-									<li class="sublist-item"><a class="subitem-link" href="#">Poltava</a></li>									
+									<li class="sublist-item"><a class="subitem-link" href="#modal-1" data-modal-open>Lviv</a></li>
+									<li class="sublist-item"><a class="subitem-link" href="#modal-1" data-modal-open>Poltava</a></li>									
 								</ul>
 							</li>
 
 							<li class="list-item">
 								<span class="item-link" href="#">Surgeries</span>
 								<ul class="nuv-sublist">
-									<li class="sublist-item"><a class="subitem-link" href="#">Lviv</a></li>
-									<li class="sublist-item"><a class="subitem-link" href="#">Poltava</a></li>									
+									<li class="sublist-item"><a class="subitem-link" href="#modal-1" data-modal-open>Lviv</a></li>
+									<li class="sublist-item"><a class="subitem-link" href="#modal-1" data-modal-open>Poltava</a></li>									
 								</ul>
 							</li>
 
@@ -62,36 +62,6 @@
 		</header>
 
 		<main role="main">
-			
-			<section class="analiz-wrapper">
-				<div class="container">
-					<div class="analiz">
-						<h2 class="analiz-title">Lviv</h2>
-						<iframe src="http://dane-i-analizy.pl/raport/1830-lviv-eng/zobacz/atlas.html" frameborder="0" style="border:none; overflow:hidden; width:850px; min-width: 100%; height:800px;" allowTransparency="true"> </iframe>
-					</div>
-				</div>
-			</section>
-			<section class="analiz-wrapper">
-				<div class="container">
-					<div class="analiz">
-						<h2 class="analiz-title">Poltava</h2>
-						<iframe src="http://dane-i-analizy.pl/raport/1829-poltava-eng/zobacz/atlas.html" frameborder="0" style="border:none; overflow:hidden; width:850px; min-width: 100%; height:800px;" allowTransparency="true"> </iframe>
-					</div>
-				</div>
-			</section>
-
-			<section class="services-wrapper" id="section2">				
-				<img class="parallax_scene1" src="./img/med-history1.jpg" alt="photo">				
-				</div>
-				<div class="container">
-					<div class="services">
-						<h2 class="services-main-title">Lorem ipsum dolor.</h2>
-						<h3 class="services-title">Lorem ipsum dolor sit amet.</h3>
-						<h3 class="services-title">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus et minima voluptate, ex blanditiis odio. Quidem, blanditiis, soluta? Sit, magnam.</h3>
-						<h3 class="services-title">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veniam itaque quaerat sit quos vero esse suscipit ipsum reiciendis. Omnis explicabo, ipsam repellat blanditiis nihil minus ullam voluptates veritatis molestias id.</h3>
-					</div>
-				</div>
-			</section>
 
 			<!--
 				inline style for image proportions
@@ -108,7 +78,8 @@
 					<div class="graphic">
 						<h2 class="graphic-title"><span class="title-text">Lorem ipsum.</span></h2>
 						<h3 class="subtitle">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h3>
-						<h3 class="subtitle second">Lorem ipsum dolor.</h3>
+
+						<h3 class="subtitle">Lviv</h3>
 						<div class="panels">
 							<a class="panel-item raised" href="#modal-1" data-modal-open>
 								<div class="item-container">
@@ -117,7 +88,7 @@
 									</div>
 									<span class="item-text">Personnel</span>			
 								</div>
-								<h3 class="panel-name">Lviv</h3>										
+								<h3 class="panel-name">Personnel</h3>										
 							</a>	
 							<a class="panel-item raised" href="#modal-1" data-modal-open>
 								<div class="item-container">
@@ -126,7 +97,7 @@
 									</div>
 									<span class="item-text">Hospital infrastructure</span>
 								</div>
-								<h3 class="panel-name">Lviv</h3>								
+								<h3 class="panel-name">Hospital infrastructure</h3>								
 							</a>	
 							<a class="panel-item raised" href="#modal-1" data-modal-open>
 								<div class="item-container">
@@ -135,7 +106,7 @@
 									</div>
 									<span class="item-text">Discharges</span>
 								</div>
-								<h3 class="panel-name">Lviv</h3>									
+								<h3 class="panel-name">Discharges</h3>									
 							</a>
 							<a class="panel-item raised" href="#modal-1" data-modal-open>
 								<div class="item-container">
@@ -144,8 +115,12 @@
 									</div>
 									<span class="item-text">Surgeries</span>	
 								</div>							
-								<h3 class="panel-name">Lviv</h3>								
+								<h3 class="panel-name">Surgeries</h3>								
 							</a>	
+						</div>
+
+						<h3 class="subtitle">Poltava</h3>
+						<div class="panels">
 							<a class="panel-item raised" href="#modal-1" data-modal-open>
 								<div class="item-container">
 									<div class="adapt-container" style="padding-bottom: 80%">
@@ -153,7 +128,7 @@
 									</div>
 									<span class="item-text">Personnel</span>
 								</div>
-								<h3 class="panel-name">Poltava</h3>								
+								<h3 class="panel-name">Personnel</h3>								
 							</a>	
 							<a class="panel-item raised" href="#modal-1" data-modal-open>
 								<div class="item-container">
@@ -162,7 +137,7 @@
 									</div>
 									<span class="item-text">Hospital infrastructure</span>
 								</div>
-								<h3 class="panel-name">Poltava</h3>								
+								<h3 class="panel-name">Hospital infrastructure</h3>								
 							</a>	
 							<a class="panel-item raised" href="#modal-1" data-modal-open>
 								<div class="item-container">
@@ -171,7 +146,7 @@
 									</div>
 									<span class="item-text">Discharges</span>
 								</div>
-								<h3 class="panel-name">Poltava</h3>								
+								<h3 class="panel-name">Discharges</h3>								
 							</a>	
 							<a class="panel-item raised" href="#modal-1" data-modal-open>
 								<div class="item-container">
@@ -180,12 +155,44 @@
 									</div>
 									<span class="item-text">Surgeries</span>
 								</div>
-								<h3 class="panel-name">Poltava</h3>								
+								<h3 class="panel-name">Surgeries</h3>								
 							</a>			
 						</div>
 					</div>
 				</div>	
-			</section>		
+			</section>
+			
+			
+
+			<section class="services-wrapper" id="section2">				
+				<img class="parallax_scene1" src="./img/med-history1.jpg" alt="photo">				
+				</div>
+				<div class="container">
+					<div class="services">
+						<h2 class="services-main-title">Lorem ipsum dolor.</h2>
+						<h3 class="services-title">Lorem ipsum dolor sit amet.</h3>
+						<h3 class="services-title">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus et minima voluptate, ex blanditiis odio. Quidem, blanditiis, soluta? Sit, magnam.</h3>
+						<h3 class="services-title">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veniam itaque quaerat sit quos vero esse suscipit ipsum reiciendis. Omnis explicabo, ipsam repellat blanditiis nihil minus ullam voluptates veritatis molestias id.</h3>
+					</div>
+				</div>
+			</section>
+
+			<section class="analiz-wrapper">
+				<div class="container">
+					<div class="analiz">
+						<h2 class="analiz-title">Lviv</h2>
+						<iframe src="http://dane-i-analizy.pl/raport/1830-lviv-eng/zobacz/atlas.html" frameborder="0" style="border:none; overflow:hidden; width:850px; min-width: 100%; height:800px;" allowTransparency="true"> </iframe>
+					</div>
+				</div>
+			</section>
+			<section class="analiz-wrapper">
+				<div class="container">
+					<div class="analiz">
+						<h2 class="analiz-title">Poltava</h2>
+						<iframe src="http://dane-i-analizy.pl/raport/1829-poltava-eng/zobacz/atlas.html" frameborder="0" style="border:none; overflow:hidden; width:850px; min-width: 100%; height:800px;" allowTransparency="true"> </iframe>
+					</div>
+				</div>
+			</section>				
 
 			<section class="services-wrapper" id="section0">				
 				<img class="parallax_scene0" src="./img/med-history0.jpg" alt="photo">				
