--- a/app/index.html
+++ b/app/index.html
@@ -61,7 +61,7 @@
 			</div>			
 		</header>
 
-		<main role="main">
+		<main role="main" class="main">
 
 			<!--
 				inline style for image proportions
@@ -278,9 +278,11 @@
 			</div>
 		</footer>
 
+		<script src="./libs/headroom.min.js"></script>
+
 		<script src="./libs/Parallax.min.js"></script>
 
-		<script src="./libs/vanilla-modal.js"></script>	
+		<script src="./libs/vanilla-modal.js"></script>			
 
 		<script src="js/app.js" type="text/javascript" charset="utf-8"></script>		
 	</body>
