--- a/app/index.html
+++ b/app/index.html
@@ -79,9 +79,9 @@
 						<h2 class="graphic-title"><span class="title-text">Lorem ipsum.</span></h2>
 						<h3 class="subtitle">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h3>
 
-						<h3 class="subtitle">Lviv</h3>
+						<h3 class="subtitle reveal-title">Lviv</h3>
 						<div class="panels">
-							<a class="panel-item raised" href="#modal-1" data-modal-open>
+							<a class="panel-item raised reveal" href="#modal-1" data-modal-open>
 								<div class="item-container">
 									<div class="adapt-container" style="padding-bottom: 80%"> 
 										<img class="panel-image" src="./img/picture-touch-up.svg" alt="Logos">		
@@ -90,7 +90,7 @@
 								</div>
 								<h3 class="panel-name">Personnel</h3>										
 							</a>	
-							<a class="panel-item raised" href="#modal-1" data-modal-open>
+							<a class="panel-item raised reveal" href="#modal-1" data-modal-open>
 								<div class="item-container">
 									<div class="adapt-container" style="padding-bottom: 80%">
 										<img class="panel-image" src="./img/social-media-icons.svg" alt="Busines cards">
@@ -99,7 +99,7 @@
 								</div>
 								<h3 class="panel-name">Hospital infrastructure</h3>								
 							</a>	
-							<a class="panel-item raised" href="#modal-1" data-modal-open>
+							<a class="panel-item raised reveal" href="#modal-1" data-modal-open>
 								<div class="item-container">
 									<div class="adapt-container" style="padding-bottom: 80%">
 										<img class="panel-image" src="./img/infographics.svg" alt="Open house flyers">
@@ -108,7 +108,7 @@
 								</div>
 								<h3 class="panel-name">Discharges</h3>									
 							</a>
-							<a class="panel-item raised" href="#modal-1" data-modal-open>
+							<a class="panel-item raised reveal" href="#modal-1" data-modal-open>
 								<div class="item-container">
 									<div class="adapt-container" style="padding-bottom: 80%">
 										<img class="panel-image" src="./img/business-cards.svg" alt="Listing presentations">
@@ -119,9 +119,9 @@
 							</a>	
 						</div>
 
-						<h3 class="subtitle">Poltava</h3>
+						<h3 class="subtitle reveal-title">Poltava</h3>
 						<div class="panels">
-							<a class="panel-item raised" href="#modal-1" data-modal-open>
+							<a class="panel-item raised reveal" href="#modal-1" data-modal-open>
 								<div class="item-container">
 									<div class="adapt-container" style="padding-bottom: 80%">
 										<img class="panel-image" src="./img/picture-touch-up.svg" alt="Just listed Just sold">
@@ -130,7 +130,7 @@
 								</div>
 								<h3 class="panel-name">Personnel</h3>								
 							</a>	
-							<a class="panel-item raised" href="#modal-1" data-modal-open>
+							<a class="panel-item raised reveal" href="#modal-1" data-modal-open>
 								<div class="item-container">
 									<div class="adapt-container" style="padding-bottom: 80%">
 										<img class="panel-image" src="./img/social-media-icons.svg" alt="picture touch up">
@@ -139,7 +139,7 @@
 								</div>
 								<h3 class="panel-name">Hospital infrastructure</h3>								
 							</a>	
-							<a class="panel-item raised" href="#modal-1" data-modal-open>
+							<a class="panel-item raised reveal" href="#modal-1" data-modal-open>
 								<div class="item-container">
 									<div class="adapt-container" style="padding-bottom: 80%">
 										<img class="panel-image" src="./img/infographics.svg" alt="Infographics">
@@ -148,7 +148,7 @@
 								</div>
 								<h3 class="panel-name">Discharges</h3>								
 							</a>	
-							<a class="panel-item raised" href="#modal-1" data-modal-open>
+							<a class="panel-item raised reveal" href="#modal-1" data-modal-open>
 								<div class="item-container">
 									<div class="adapt-container" style="padding-bottom: 80%">
 										<img class="panel-image" src="./img/business-cards.svg" alt="Mailers">
@@ -180,7 +180,7 @@
 			<section class="analiz-wrapper">
 				<div class="container">
 					<div class="analiz">
-						<h2 class="analiz-title">Lviv</h2>
+						<h2 class="analiz-title reveal-title">Lviv</h2>
 						<iframe src="http://dane-i-analizy.pl/raport/1830-lviv-eng/zobacz/atlas.html" frameborder="0" style="border:none; overflow:hidden; width:850px; min-width: 100%; height:800px;" allowTransparency="true"> </iframe>
 					</div>
 				</div>
@@ -188,7 +188,7 @@
 			<section class="analiz-wrapper">
 				<div class="container">
 					<div class="analiz">
-						<h2 class="analiz-title">Poltava</h2>
+						<h2 class="analiz-title reveal-title">Poltava</h2>
 						<iframe src="http://dane-i-analizy.pl/raport/1829-poltava-eng/zobacz/atlas.html" frameborder="0" style="border:none; overflow:hidden; width:850px; min-width: 100%; height:800px;" allowTransparency="true"> </iframe>
 					</div>
 				</div>
@@ -282,7 +282,9 @@
 
 		<script src="./libs/Parallax.min.js"></script>
 
-		<script src="./libs/vanilla-modal.js"></script>			
+		<script src="./libs/vanilla-modal.js"></script>
+
+		<script src="./libs/scrollreveal.min.js"></script>			
 
 		<script src="js/app.js" type="text/javascript" charset="utf-8"></script>		
 	</body>
