--- a/app/index.html
+++ b/app/index.html
@@ -76,7 +76,7 @@
 			<section class="graphic-wrapper" id="section3">
 				<div class="container">
 					<div class="graphic">
-						<h2 class="graphic-title"><span class="title-text">Analytical tools for HMP</span></h2>
+						<h3 class="graphic-title"><span class="title-text">Analytical tools for HMP</span></h3>
 						<p>The Hospital Master Plan is a part of the reorganisation of the health
 							care system in Ukraine.
 							A Master Plan has the task of setting general conditions for the future development of the
@@ -92,7 +92,7 @@
 							<a class="panel-item raised reveal" href="#modal-1" data-modal-open>
 								<div class="item-container">
 									<div class="adapt-container" style="padding-bottom: 80%"> 
-										<img class="panel-image" src="./img/picture-touch-up.svg" alt="Logos">		
+										<img class="panel-image" src="./img/doctor.svg" alt="Logos">		
 									</div>
 									<span class="item-text">Personnel</span>			
 								</div>
@@ -101,7 +101,7 @@
 							<a class="panel-item raised reveal" href="#modal-1" data-modal-open>
 								<div class="item-container">
 									<div class="adapt-container" style="padding-bottom: 80%">
-										<img class="panel-image" src="./img/social-media-icons.svg" alt="Busines cards">
+										<img class="panel-image" src="./img/hospital.svg" alt="Busines cards">
 									</div>
 									<span class="item-text">Infrastructure</span>
 								</div>
@@ -110,7 +110,7 @@
 							<a class="panel-item raised reveal" href="#modal-1" data-modal-open>
 								<div class="item-container">
 									<div class="adapt-container" style="padding-bottom: 80%">
-										<img class="panel-image" src="./img/infographics.svg" alt="Open house flyers">
+										<img class="panel-image" src="./img/medical-history.svg" alt="Open house flyers">
 									</div>
 									<span class="item-text">Discharges</span>
 								</div>
@@ -119,7 +119,7 @@
 							<a class="panel-item raised reveal" href="#modal-1" data-modal-open>
 								<div class="item-container">
 									<div class="adapt-container" style="padding-bottom: 80%">
-										<img class="panel-image" src="./img/business-cards.svg" alt="Listing presentations">
+										<img class="panel-image" src="./img/surgery.svg" alt="Listing presentations">
 									</div>
 									<span class="item-text">Surgeries</span>	
 								</div>							
@@ -132,7 +132,7 @@
 							<a class="panel-item raised reveal" href="#modal-1" data-modal-open>
 								<div class="item-container">
 									<div class="adapt-container" style="padding-bottom: 80%">
-										<img class="panel-image" src="./img/picture-touch-up.svg" alt="Just listed Just sold">
+										<img class="panel-image" src="./img/doctor.svg" alt="Just listed Just sold">
 									</div>
 									<span class="item-text">Personnel</span>
 								</div>
@@ -141,7 +141,7 @@
 							<a class="panel-item raised reveal" href="#modal-1" data-modal-open>
 								<div class="item-container">
 									<div class="adapt-container" style="padding-bottom: 80%">
-										<img class="panel-image" src="./img/social-media-icons.svg" alt="picture touch up">
+										<img class="panel-image" src="./img/hospital.svg" alt="picture touch up">
 									</div>
 									<span class="item-text">Infrastructure</span>
 								</div>
@@ -150,7 +150,7 @@
 							<a class="panel-item raised reveal" href="#modal-1" data-modal-open>
 								<div class="item-container">
 									<div class="adapt-container" style="padding-bottom: 80%">
-										<img class="panel-image" src="./img/infographics.svg" alt="Infographics">
+										<img class="panel-image" src="./img/medical-history.svg" alt="Infographics">
 									</div>
 									<span class="item-text">Discharges</span>
 								</div>
@@ -159,7 +159,7 @@
 							<a class="panel-item raised reveal" href="#modal-1" data-modal-open>
 								<div class="item-container">
 									<div class="adapt-container" style="padding-bottom: 80%">
-										<img class="panel-image" src="./img/business-cards.svg" alt="Mailers">
+										<img class="panel-image" src="./img/surgery.svg" alt="Mailers">
 									</div>
 									<span class="item-text">Surgeries</span>
 								</div>
@@ -173,12 +173,12 @@
 			
 
 			<section class="services-wrapper" id="section2">				
-				<img class="parallax_scene1" src="./img/med-history1.jpg" alt="photo">				
+				<img class="parallax_scene1" src="./img/1.jpg" alt="photo">				
 				</div>
 				<div class="container">
 					<div class="services">
-						<h2 class="services-main-title">Lorem ipsum dolor.</h2>
-						<h3 class="services-title">The Hospital Master Plan is a part of the reorganisation of the health
+						<h2 class="services-title">Hospital Master Plan</h2>
+						<h3 class="check-text text-white">The Hospital Master Plan is a part of the reorganisation of the health
 							care system in Ukraine.
 							A Master Plan has the task of setting general conditions for the future development of the
 							hospital system.
@@ -209,12 +209,12 @@
 			</section>				
 
 			<section class="services-wrapper" id="section0">				
-				<img class="parallax_scene0" src="./img/med-history0.jpg" alt="photo">				
+				<img class="parallax_scene0" src="./img/2.jpg" alt="photo">				
 				</div>
 				<div class="container">
 					<div class="services">
-						<h2 class="services-main-title">Lorem ipsum.</h2>
-						<h3 class="services-title">The Hospital Master Plan is a part of the reorganisation of the health
+						<h2 class="services-title">Hospital Master Plan</h2>
+						<h3 class="check-text text-white">The Hospital Master Plan is a part of the reorganisation of the health
 							care system in Ukraine.
 							A Master Plan has the task of setting general conditions for the future development of the
 							hospital system.
@@ -231,9 +231,9 @@
 			<section class="about-wrapper" id="section1">
 				<div class="container">
 					<div class="about">
-						<h2 class="about-title">Wind of changes</h2>
+						<h2 class="about-title">Іntroduction</h2>
 						<div class="img-container">
-							<img class="about-img" src="./img/ukraine.png" alt="photo">
+							<img class="about-img" src="./img/pic3.png" alt="photo">
 						</div>						
 						<p class="about-text">The old Soviet healthcare system is a comprehensive system based mainly on three types
 							of hospitals: local, district and republican. Meanwhile, the local and district hospitals were
@@ -274,12 +274,12 @@
 			</section>	
 
 			<section class="services-wrapper" id="section5">				
-				<img class="parallax_scene2" src="./img/med-history2.jpg" alt="photo">				
+				<img class="parallax_scene2" src="./img/3.jpeg" alt="photo">				
 				</div>
 				<div class="container">
 					<div class="services">
-						<h2 class="services-main-title">Lorem ipsum dolor.</h2>
-						<h3 class="services-title">The Hospital Master Plan is a part of the reorganisation of the health
+						<h2 class="services-title">HMP</h2>
+						<h3 class="check-text text-white">The Hospital Master Plan is a part of the reorganisation of the health
 							care system in Ukraine.
 							A Master Plan has the task of setting general conditions for the future development of the
 							hospital system.
