--- a/app/index.html
+++ b/app/index.html
@@ -15,7 +15,7 @@
 			<div class="container">
 				<div class="header">
 					<div class="logo-container">
-						<img class="logo" src="./img/logo.jpg" alt="logo">	
+						<img class="logo" src="./img/logo.svg" alt="logo">	
 					</div>
 
 					<nav class="nav">
