--- a/app/index.html
+++ b/app/index.html
@@ -14,7 +14,7 @@
 		<link rel="stylesheet" type="text/css" href="./style.css"/>		
 		<link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
 	</head>
-
+	
 	<body>	
 		<header class="header-wrapper">
 			<div class="container">
@@ -27,39 +27,26 @@
 					</div>
 
 					<nav class="nav">
-						<ul class="nav-list">							
-							<li class="list-item"><a class="item-link active" href="./">Home</a></li>
+						<ul class="nav-list">
 
 							<li class="list-item">
-								<span class="item-link">Personnel</span>
+								<span class="item-link">Interactive Reports</span>
 								<ul class="nuv-sublist">
 									<li class="sublist-item"><a class="subitem-link" href="#modal-1" data-modal-open>Lviv</a></li>
-									<li class="sublist-item"><a class="subitem-link" href="#modal-1" data-modal-open>Poltava</a></li>									
+									<li class="sublist-item"><a class="subitem-link" href="#modal-2" data-modal-open>Poltava</a></li>									
 								</ul>
 							</li>
 
 							<li class="list-item">
-								<span class="item-link">Infrastructure</span>
-								<ul class="nuv-sublist">
-									<li class="sublist-item"><a class="subitem-link" href="#modal-1" data-modal-open>Lviv</a></li>
-									<li class="sublist-item"><a class="subitem-link" href="#modal-1" data-modal-open>Poltava</a></li>									
-								</ul>
+								<span class="item-link">Software</span>
 							</li>
 
 							<li class="list-item">
-								<span class="item-link" href="#">Discharges</span>
-								<ul class="nuv-sublist">
-									<li class="sublist-item"><a class="subitem-link" href="#modal-1" data-modal-open>Lviv</a></li>
-									<li class="sublist-item"><a class="subitem-link" href="#modal-1" data-modal-open>Poltava</a></li>									
-								</ul>
+								<span class="item-link">About</span>								
 							</li>
 
 							<li class="list-item">
-								<span class="item-link" href="#">Surgeries</span>
-								<ul class="nuv-sublist">
-									<li class="sublist-item"><a class="subitem-link" href="#modal-1" data-modal-open>Lviv</a></li>
-									<li class="sublist-item"><a class="subitem-link" href="#modal-1" data-modal-open>Poltava</a></li>									
-								</ul>
+								<span class="item-link">Instructions</span>								
 							</li>
 
 						</ul>
@@ -93,8 +80,142 @@
 							the situation needs to be changed.</p>		
 					</div>						
 				</div>							
-			</section>		
+			</section>
 
+
+
+			<section class="analiz-wrapper">
+
+				<div class="container">
+					<div class="city-button-container">
+
+						<a class="city-button" href="#" name="Cherkasy">Cherkasy</a>
+						<a class="city-button" href="#" name="Chernihiv">Chernihiv</a>
+						<a class="city-button" href="#" name="Chernivtsi">Chernivtsi</a>
+						<a class="city-button" href="#" name="Dnipro">Dnipro</a>
+						<a class="city-button" href="#" name="Donetsk">Donetsk</a>
+						<a class="city-button" href="#" name="Ivano-Frankivsk">Ivano-Frankivsk</a>
+						<a class="city-button" href="#" name="Kharkiv">Kharkiv</a>
+						<a class="city-button" href="#" name="Kherson">Kherson</a>
+						<a class="city-button" href="#" name="Khmelnytskyi">Khmelnytskyi</a>
+						<a class="city-button" href="#" name="Kiev">Kiev</a>
+						<a class="city-button" href="#" name="Kropyvnytskyi">Kropyvnytskyi</a>
+						<a class="city-button" href="#" name="Luhansk">Luhansk</a>
+						<a class="city-button active" href="#" name="Lviv">Lviv</a>
+						<a class="city-button" href="#" name="Mykolaiv">Mykolaiv</a>
+						<a class="city-button" href="#" name="Odessa">Odessa</a>
+						<a class="city-button" href="#" name="Poltava">Poltava</a>
+						<a class="city-button" href="#" name="Rivne">Rivne</a>
+						<a class="city-button" href="#" name="Sumy">Sumy</a>
+						<a class="city-button" href="#" name="Ternopil">Ternopil</a>
+						<a class="city-button" href="#" name="Vinnytsia">Vinnytsia</a>
+						<a class="city-button" href="#" name="Lutsk">Lutsk</a>
+						<a class="city-button" href="#" name="Uzhhorod">Uzhhorod</a>
+						<a class="city-button" href="#" name="Zaporizhia">Zaporizhia</a>
+						<a class="city-button" href="#" name="Zhytomyr">Zhytomyr</a>
+
+					</div>
+
+					<div class="analiz">
+
+						<div class="js-atlas" id="Cherkasy">
+							<h2 class="analiz-title">Cherkasy</h2>							
+						</div>
+						<div class="js-atlas" id="Chernihiv">
+							<h2 class="analiz-title">Chernihiv</h2>							
+						</div>
+						<div class="js-atlas" id="Chernivtsi">
+							<h2 class="analiz-title">Chernivtsi</h2>							
+						</div>
+						<div class="js-atlas" id="Dnipro">
+							<h2 class="analiz-title">Dnipro</h2>							
+						</div>
+						<div class="js-atlas" id="Donetsk">
+							<h2 class="analiz-title">Donetsk</h2>							
+						</div>
+						<div class="js-atlas" id="Ivano-Frankivsk">
+							<h2 class="analiz-title">Ivano-Frankivsk</h2>							
+						</div>
+						<div class="js-atlas" id="Kharkiv">
+							<h2 class="analiz-title">Kharkiv</h2>							
+						</div>
+						<div class="js-atlas" id="Kherson">
+							<h2 class="analiz-title">Kherson</h2>							
+						</div>
+						<div class="js-atlas" id="Khmelnytskyi">
+							<h2 class="analiz-title">Khmelnytskyi</h2>							
+						</div>
+						<div class="js-atlas" id="Kiev">
+							<h2 class="analiz-title">Kiev</h2>							
+						</div>
+						<div class="js-atlas" id="Kropyvnytskyi">
+							<h2 class="analiz-title">Kropyvnytskyi</h2>							
+						</div>
+						<div class="js-atlas" id="Luhansk">
+							<h2 class="analiz-title">Luhansk</h2>							
+						</div>
+						<div class="js-atlas open" id="Lviv">
+							<h2 class="analiz-title">Lviv</h2>
+							<iframe src="http://dane-i-analizy.pl/raport/1830-lviv-eng/zobacz/atlas.html" frameborder="0" style="border:none; overflow:hidden; width:850px; min-width: 100%; height:800px;" allowTransparency="true"> </iframe>
+						</div>
+						<div class="js-atlas" id="Mykolaiv">
+							<h2 class="analiz-title">Mykolaiv</h2>							
+						</div>
+						<div class="js-atlas" id="Odessa">
+							<h2 class="analiz-title">Odessa</h2>							
+						</div>
+						<div class="js-atlas" id="Poltava">
+							<h2 class="analiz-title">Poltava</h2>
+							<iframe src="http://dane-i-analizy.pl/raport/1829-poltava-eng/zobacz/atlas.html" frameborder="0" style="border:none; overflow:hidden; width:850px; min-width: 100%; height:800px;" allowTransparency="true"> </iframe>
+						</div>
+						<div class="js-atlas" id="Rivne">
+							<h2 class="analiz-title">Rivne</h2>							
+						</div>
+						<div class="js-atlas" id="Sumy">
+							<h2 class="analiz-title">Sumy</h2>							
+						</div>
+						<div class="js-atlas" id="Ternopil">
+							<h2 class="analiz-title">Ternopil</h2>							
+						</div>
+						<div class="js-atlas" id="Vinnytsia">
+							<h2 class="analiz-title">Vinnytsia</h2>							
+						</div>
+						<div class="js-atlas" id="Lutsk">
+							<h2 class="analiz-title">Lutsk</h2>							
+						</div>
+						<div class="js-atlas" id="Uzhhorod">
+							<h2 class="analiz-title">Uzhhorod</h2>							
+						</div>
+						<div class="js-atlas" id="Zaporizhia">
+							<h2 class="analiz-title">Zaporizhia</h2>							
+						</div>
+						<div class="js-atlas" id="Zhytomyr">
+							<h2 class="analiz-title">Zhytomyr</h2>							
+						</div>
+					</div>
+				</div>
+
+			</section>	
+
+			<section class="services-wrapper">				
+				<img class="parallax_scene1" src="./img/1.jpg" alt="photo">				
+				</div>
+				<div class="container">
+					<div class="services">
+						<h2 class="services-title">Hospital Master Plan</h2>
+						<h3 class="check-text text-white">The Hospital Master Plan is a part of the reorganisation of the health
+							care system in Ukraine.
+							A Master Plan has the task of setting general conditions for the future development of the
+							hospital system.
+							This means getting away from accepted customs and making the necessary settings for a
+							future-oriented structure.
+							A master plan cannot and should not anticipate or replace detailed studies for each location regarding its individual circumstances and possibilities of development.
+							The restructured hospital sector will guarantee the improved access of the population to quality hospital care services to an equal extent for all citizens, as well as a hospital functional and cost-
+							efficient endowment.</h3>
+					</div>
+				</div>
+			</section>
+			
 			<!--
 				inline style for image proportions
 				100%   - 1:1 = square
@@ -201,44 +322,7 @@
 					</div>
 				</div>	
 			</section>
-			
-			
-
-			<section class="services-wrapper">				
-				<img class="parallax_scene1" src="./img/1.jpg" alt="photo">				
-				</div>
-				<div class="container">
-					<div class="services">
-						<h2 class="services-title">Hospital Master Plan</h2>
-						<h3 class="check-text text-white">The Hospital Master Plan is a part of the reorganisation of the health
-							care system in Ukraine.
-							A Master Plan has the task of setting general conditions for the future development of the
-							hospital system.
-							This means getting away from accepted customs and making the necessary settings for a
-							future-oriented structure.
-							A master plan cannot and should not anticipate or replace detailed studies for each location regarding its individual circumstances and possibilities of development.
-							The restructured hospital sector will guarantee the improved access of the population to quality hospital care services to an equal extent for all citizens, as well as a hospital functional and cost-
-							efficient endowment.</h3>
-					</div>
-				</div>
-			</section>
-
-			<section class="analiz-wrapper">
-				<div class="container">
-					<div class="analiz">
-						<h2 class="analiz-title reveal-title">Lviv</h2>
-						<iframe src="http://dane-i-analizy.pl/raport/1830-lviv-eng/zobacz/atlas.html" frameborder="0" style="border:none; overflow:hidden; width:850px; min-width: 100%; height:800px;" allowTransparency="true"> </iframe>
-					</div>
-				</div>
-			</section>
-			<section class="analiz-wrapper">
-				<div class="container">
-					<div class="analiz">
-						<h2 class="analiz-title reveal-title">Poltava</h2>
-						<iframe src="http://dane-i-analizy.pl/raport/1829-poltava-eng/zobacz/atlas.html" frameborder="0" style="border:none; overflow:hidden; width:850px; min-width: 100%; height:800px;" allowTransparency="true"> </iframe>
-					</div>
-				</div>
-			</section>				
+						
 
 			<section class="services-wrapper">				
 				<img class="parallax_scene0" src="./img/2.jpg" alt="photo">				
@@ -302,7 +386,7 @@
 				<iframe src="http://dane-i-analizy.pl/raport/1830-lviv-eng/zobacz/atlas.html" frameborder="0" style="border:none; overflow:hidden; width:850px; min-width: 100%; height:800px;" allowTransparency="true"> </iframe>
 			</div>
 			<div id="modal-2" style="display:none">
-				<img class="img" src="http://i.imgur.com/AzKAV.jpg" alt="Just Can't Reach.">
+				<iframe src="http://dane-i-analizy.pl/raport/1829-poltava-eng/zobacz/atlas.html" frameborder="0" style="border:none; overflow:hidden; width:850px; min-width: 100%; height:800px;" allowTransparency="true"> </iframe>
 			</div>
 
 			<div class="modal">
