Comment part of code

--- a/app/index.html
+++ b/app/index.html
@@ -119,7 +119,7 @@
 							The restructured hospital sector will guarantee the improved access of the population to quality hospital care services to an equal extent for all citizens, as well as a hospital functional and cost-
 							efficient endowment.</p>
 
-						<h3 class="subtitle reveal-title">Lviv</h3>
+						<!-- <h3 class="subtitle reveal-title">Lviv</h3>
 						<div class="panels">
 							<a class="panel-item raised reveal" href="#modal-1" data-modal-open>
 								<div class="item-container">
@@ -197,7 +197,7 @@
 								</div>
 								<h3 class="panel-name">Surgeries</h3>								
 							</a>			
-						</div>
+						</div> -->
 					</div>
 				</div>	
 			</section>
