Change menu points

--- a/app/index.html
+++ b/app/index.html
@@ -30,7 +30,7 @@
 						<ul class="nav-list">
 
 							<li class="list-item">
-								<span class="item-link">Interactive Reports</span>
+								<span class="item-link">Reports</span>
 								<ul class="nuv-sublist">
 									<li class="sublist-item"><a class="subitem-link" href="#modal-1" data-modal-open>Lviv</a></li>
 									<li class="sublist-item"><a class="subitem-link" href="#modal-2" data-modal-open>Poltava</a></li>									
@@ -38,12 +38,12 @@
 							</li>
 
 							<li class="list-item">
-								<span class="item-link">Software</span>
+								<span class="item-link">Distances</span>
 							</li>
 
-							<li class="list-item">
+							<!-- <li class="list-item">
 								<span class="item-link">About</span>								
-							</li>
+							</li> -->
 
 							<li class="list-item">
 								<span class="item-link">Instructions</span>								
