Additional if for correct execution

--- a/app/index.html
+++ b/app/index.html
@@ -98,7 +98,7 @@
 						<a class="city-button" href="#" name="Kharkiv">Kharkiv</a>
 						<a class="city-button" href="#" name="Kherson">Kherson</a>
 						<a class="city-button" href="#" name="Khmelnytskyi">Khmelnytskyi</a>
-						<a class="city-button" href="#" name="Kiev">Kiev</a>
+						<a class="city-button" href="#" name="Kyiv">Kyiv</a>
 						<a class="city-button" href="#" name="Kropyvnytskyi">Kropyvnytskyi</a>
 						<a class="city-button" href="#" name="Luhansk">Luhansk</a>
 						<a class="city-button active" href="#" name="Lviv">Lviv</a>
@@ -145,8 +145,8 @@
 						<div class="js-atlas" id="Khmelnytskyi">
 							<h2 class="analiz-title">Khmelnytskyi</h2>							
 						</div>
-						<div class="js-atlas" id="Kiev">
-							<h2 class="analiz-title">Kiev</h2>							
+						<div class="js-atlas" id="Kyiv">
+							<h2 class="analiz-title">Kyiv</h2>							
 						</div>
 						<div class="js-atlas" id="Kropyvnytskyi">
 							<h2 class="analiz-title">Kropyvnytskyi</h2>							
@@ -154,7 +154,7 @@
 						<div class="js-atlas" id="Luhansk">
 							<h2 class="analiz-title">Luhansk</h2>							
 						</div>
-						<div class="js-atlas open" id="Lviv">
+						<div class="js-atlas" id="Lviv">
 							<h2 class="analiz-title">Lviv</h2>
 							<iframe src="http://dane-i-analizy.pl/raport/1830-lviv-eng/zobacz/atlas.html" frameborder="0" style="border:none; overflow:hidden; width:850px; min-width: 100%; height:800px;" allowTransparency="true"> </iframe>
 						</div>
